# mamba-metal

./: .gitignore  README.ja.md  README.md  pyproject.toml
experiments/01-hello-metal/: vector_add.py
experiments/02-bandwidth/: bandwidth.py
experiments/03-threadgroup/: conv1d_tiling.py
experiments/04-simd-scan/: block_scan.py  simd_scan.py
experiments/05-pair-scan/: pair_scan.py
experiments/06-selective-scan/: selective_scan.py
experiments/07-chunked/: selective_scan_chunked.py
experiments/08-benchmark/: bench.py
experiments/09-features/: test_features.py
experiments/10-fp16/: test_fp16.py
experiments/11-mamba-block/: test_block.py
experiments/12-hf-weights/: inspect_weights.py
experiments/13-mamba-model/: test_model.py
experiments/14-load-hf/: test_load.py
experiments/15-generate/: demo.py
experiments/16-larger-models/: compare.py
experiments/17-incremental/: constant_time.py  test_step.py
experiments/18-prefill/: bench_prefill.py  verify_state_out.py
experiments/19-vs-mlx-lm/: bench_vs_mlx_lm.py
mamba_metal/: __init__.py  _loader.py  generate.py  load_hf.py  mamba_block.py  mamba_model.py  selective_scan.py
mamba_metal/kernels/: block_scan.metal  conv1d_global.metal  conv1d_tg.metal  copy_scalar.metal  copy_vec4.metal  pair_scan.metal  selective_scan.metal  selective_scan_chunked.metal  simd_scan_builtin.metal  simd_scan_handrolled.metal  vector_add.metal
