[project]
name = "mamba-metal"
version = "0.1.0"
description = "Mamba selective scan in Metal Shading Language for Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.20.0",
    "numpy>=2.0",
    "huggingface-hub>=0.20",
    "safetensors>=0.4",
    "transformers>=4.40",  # tokenizer only
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipython>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mamba_metal"]

[tool.hatch.build.targets.wheel.force-include]
"mamba_metal/kernels" = "mamba_metal/kernels"
